--- a/assets/scss/common/_var.scss
+++ b/assets/scss/common/_var.scss
@@ -20,6 +20,7 @@ $button-header-access-bg-color: #B2B2B2;
 $button-header-hamburger-bg-color: #E6E6E6;
 $button-header-hamburger-color: #272727;
 $button-memorial-contact-border-color: #707070;
+$slider-arrow-color: #FFFFFF;
 
 $contents-width: 1320px;
 
