--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -589,6 +589,15 @@
   background-size: cover;
   background-repeat: no-repeat;
 }
+@media screen and (max-width: 960px) {
+  .main-visual-inner-event {
+    background-image: url("../images/junenji_event_mv_tablet.png");
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 450px;
+  }
+}
 .main-contents {
   width: 100%;
   max-width: 1320px;
@@ -970,9 +979,22 @@
     font-size: 1.6rem;
   }
 }
+@media screen and (max-width: 960px) {
+  .main-about-event {
+    width: 93%;
+    margin: 0 auto;
+    padding-bottom: 100px;
+  }
+}
 .main-about-event-list {
   position: relative;
   margin-top: 80px;
+}
+@media screen and (max-width: 960px) {
+  .main-about-event-list {
+    margin: 50px auto 0;
+    width: 70%;
+  }
 }
 .main-about-event-item {
   display: flex;
@@ -987,16 +1009,40 @@
   font-size: 2.5rem;
   font-weight: 900;
 }
+@media screen and (max-width: 960px) {
+  .main-about-event-item-left, .main-about-event-item-right {
+    padding-top: 21px;
+    padding-bottom: 21px;
+    font-size: 1.7rem;
+  }
+}
 .main-about-event-text {
   display: flex;
   justify-content: center;
   align-items: center;
   margin-top: 70px;
 }
+@media screen and (max-width: 960px) {
+  .main-about-event-text {
+    margin-top: 50px;
+  }
+}
+@media screen and (max-width: 960px) {
+  .main-about-event-text img {
+    display: none;
+  }
+}
 .main-about-event-text p {
   font-size: 2.8rem;
   font-weight: 900;
   margin-left: 10px;
+}
+@media screen and (max-width: 960px) {
+  .main-about-event-text p {
+    font-size: 1.7rem;
+    font-weight: bold;
+    margin-left: 0;
+  }
 }
 @media screen and (max-width: 960px) {
   .main-menu-list {
@@ -1638,18 +1684,48 @@
 .main-fes {
   padding-bottom: 150px;
 }
+@media screen and (max-width: 960px) {
+  .main-fes {
+    width: 93%;
+    margin: 0 auto;
+    padding-bottom: 100px;
+  }
+}
+@media screen and (max-width: 960px) {
+  .main-fes-title {
+    display: none;
+  }
+}
 .main-fes-video {
   margin-top: 80px;
+}
+@media screen and (max-width: 960px) {
+  .main-fes-video {
+    margin-top: 0;
+  }
 }
 .main-fes-text {
   margin-top: 70px;
   font-size: 2rem;
   line-height: 1.8;
 }
+@media screen and (max-width: 960px) {
+  .main-fes-text {
+    margin-top: 45px;
+    font-size: 1.7rem;
+    line-height: 1.7647058824;
+    font-weight: bold;
+  }
+}
 .main-event-slider {
   position: relative;
   padding-top: 150px;
   padding-bottom: 200px;
+}
+@media screen and (max-width: 960px) {
+  .main-event-slider {
+    padding-top: 200px;
+  }
 }
 .main-event-slider-title {
   width: 80%;
@@ -1661,23 +1737,67 @@
   font-weight: bold;
   text-align: center;
 }
+@media screen and (max-width: 960px) {
+  .main-event-slider-title {
+    display: none;
+  }
+}
+.main-event-slider-title-tablet {
+  display: none;
+}
+@media screen and (max-width: 960px) {
+  .main-event-slider-title-tablet {
+    display: block;
+    border: none;
+    padding: 0;
+    font-size: 3rem;
+  }
+}
 .main-event-slider-for {
   margin-top: 80px;
+}
+@media screen and (max-width: 960px) {
+  .main-event-slider-for {
+    display: none;
+  }
 }
 .main-event-slider-nav {
   margin-top: 30px;
 }
+@media screen and (max-width: 960px) {
+  .main-event-slider-nav {
+    display: none;
+  }
+}
 .main-event-slider-nav-item {
   margin-right: 30px;
-  width: 140px;
 }
 .main-event-slider-nav-item:last-of-type {
   margin-right: 0;
+}
+.main-event-slider-tablet {
+  display: none;
+}
+@media screen and (max-width: 960px) {
+  .main-event-slider-tablet {
+    display: block;
+    margin-top: 80px;
+  }
 }
 .main-event-slider-text {
   margin-top: 80px;
   font-size: 2rem;
   line-height: 1.8;
+}
+@media screen and (max-width: 960px) {
+  .main-event-slider-text {
+    width: 93%;
+    margin: 0 auto;
+    margin-top: 60px;
+    font-size: 1.7rem;
+    line-height: 1.7647058824;
+    font-weight: bold;
+  }
 }
 @media screen and (max-width: 960px) {
   .main-slider {
@@ -1719,6 +1839,48 @@
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
+}
+
+.main-event-slider-tablet .slick-arrow {
+  color: #FFFFFF;
+  font-size: 0rem;
+  cursor: pointer;
+  z-index: 1;
+}
+
+.main-event-slider-tablet .slick-arrow:before {
+  font-size: 5rem;
+}
+
+.main-event-slider-tablet .slick-prev {
+  left: 0;
+}
+
+.main-event-slider-tablet .slick-prev:before {
+  content: "◀︎";
+  position: absolute;
+  left: 20px;
+}
+
+.main-event-slider-tablet .slick-next {
+  right: 0;
+}
+
+.main-event-slider-tablet .slick-next:before {
+  content: "▶︎";
+  position: absolute;
+  right: 40px;
+}
+
+.main-event-slider-tablet .slick-dots {
+  position: absolute;
+  bottom: 20px;
+  z-index: 1;
+}
+
+.main-event-slider-tablet .slick-dots li button::before {
+  font-size: 1.6rem;
+  color: #FFFFFF;
 }
 
 .footer {
