--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -613,6 +613,15 @@
   background-size: cover;
   background-repeat: no-repeat;
 }
+@media screen and (max-width: 960px) {
+  .main-visual-inner-contact {
+    background-image: url("../images/junenji_contact_mv_tablet.png");
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 450px;
+  }
+}
 .main-contents {
   width: 100%;
   max-width: 1320px;
@@ -1094,6 +1103,13 @@
 .main-about-contact {
   padding-top: 150px;
 }
+@media screen and (max-width: 960px) {
+  .main-about-contact {
+    display: block;
+    padding-top: 100px;
+    padding-bottom: 100px;
+  }
+}
 .main-about-contact-title {
   margin: 0 auto;
   width: 40%;
@@ -1101,11 +1117,26 @@
   padding-bottom: 15px;
   border: 2px solid #707070;
 }
+@media screen and (max-width: 960px) {
+  .main-about-contact-title {
+    padding: 0;
+    border: none;
+    font-size: 3rem;
+  }
+}
 .main-about-contact-text {
   margin-top: 50px;
   text-align: center;
   font-size: 2rem;
   line-height: 1.8;
+}
+@media screen and (max-width: 960px) {
+  .main-about-contact-text {
+    margin-top: 20px;
+    font-size: 1.7rem;
+    line-height: 1.7647058824;
+    font-weight: bold;
+  }
 }
 @media screen and (max-width: 960px) {
   .main-menu-list {
