--- a/assets/scss/common/_var.scss
+++ b/assets/scss/common/_var.scss
@@ -21,6 +21,8 @@ $button-header-hamburger-bg-color: #E6E6E6;
 $button-header-hamburger-color: #272727;
 $button-memorial-contact-border-color: #707070;
 $slider-arrow-color: #FFFFFF;
+$about-border-color: #272727;
+$about-item-border-color: #707070;
 
 $contents-width: 1320px;
 
