--- a/assets/scss/_main.scss
+++ b/assets/scss/_main.scss
@@ -131,6 +131,11 @@
 				}
 			}
 
+			&-about {
+				@extend .main-visual-inner-memorial;
+				@include mixin.SetBackGroundImage("../images/junenji_about_mv.png");
+			}
+
 		}
 	}
 
@@ -980,6 +985,13 @@
 
 			}
 		}
+
+		&-about {
+			&-text {
+				@include mixin.FontSize(20px);
+				@include mixin.LineHeight(20, 36);
+			}
+		}
 	}
 
 	&-grave {
@@ -1506,6 +1518,75 @@
 
 					@include mixin.FontSize(13px);
 					@include mixin.LineHeight(13, 22);
+				}
+			}
+		}
+	}
+
+	&-treasure {
+		padding-top: 150px;
+		padding-bottom: 200px;
+
+		border-bottom: 1px solid var.$about-border-color;
+
+		&-title {
+			@include mixin.FontSize(45px);
+			font-weight: bold;
+			text-align: center;
+		}
+
+		&-list {
+			display: flex;
+			position: relative;
+
+			margin-top: 80px;
+		}
+
+		&-item {
+			border: 1px solid var.$about-item-border-color;
+			
+			padding-bottom: 84px;
+
+
+			&-top {
+				width: 100%;
+			}
+
+			&-bottom {
+				width: 50%;
+				margin-right: 80px;
+				padding-bottom: 32px;
+
+				&:last-of-type {
+					margin-right: 0;
+				}
+			}
+
+			&-image {
+				height: 560px;
+
+				&-bottom {
+					height: 430px;
+				}
+			}
+
+			&-title {
+				margin-top: 48px;
+				
+				@include mixin.FontSize(45px);
+				font-weight: bold;
+				text-align: center;
+			}
+
+			&-text {
+				width: 87%;
+				margin: 38px auto 0;
+
+				@include mixin.FontSize(20px);
+				@include mixin.LineHeight(20, 36);
+
+				&-bottom {
+					width: 90%;
 				}
 			}
 		}
